--- a/src/features/DestinationMaps/Greece/Greece.module.scss
+++ b/src/features/DestinationMaps/Greece/Greece.module.scss
@@ -48,6 +48,7 @@
   margin-top: 248px;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -60,6 +61,7 @@
   transition: 0.2s all ease-in;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -72,6 +74,7 @@
   transition: 0.2s all ease-in;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -86,6 +89,7 @@
   transform: rotate(0.5deg);
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -99,6 +103,7 @@
   z-index: 1;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -111,6 +116,7 @@
   transition: 0.2s all ease-in;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -123,6 +129,7 @@
   transition: 0.2s all ease-in;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -135,6 +142,7 @@
   margin-top: 134px;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -147,6 +155,7 @@
   transition: 0.2s all ease-in;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
@@ -159,8 +168,40 @@
   transition: 0.2s all ease-in;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
+  }
+}
+
+.sub__gr29 {
+  position: absolute;
+
+  transition: 0.2s all ease-in;
+  cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
+  pointer-events: none;
+  top: 380px;
+  right: 271px;
+  z-index: 1;
+
+  path {
+    pointer-events: all;
+
+    &:hover {
+      fill: #52B55F;
+    }
+  }
+
+
+  >svg {
+    transform: scale(0.43);
+
+  }
+
+
+  [class*='RegionCard_cart_shown'] {
+    bottom: 50% !important;
+    left: 50% !important;
   }
 }
 
@@ -171,6 +212,7 @@
   transition: 0.2s all ease-in;
   cursor: url('../../../../public/assets/images/destinations/cursor.png'), auto;
   pointer-events: none;
+
   path {
     pointer-events: all;
   }
