--- a/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
+++ b/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
@@ -4,8 +4,7 @@
   position: relative;
   width: 1040px;
   height: 720px;
-  background: url('../../../../public/assets/images/destinations/Individual maps/Peloponnes.png')
-    no-repeat center;
+  background: url('../../../../public/assets/images/destinations/Individual maps/Peloponnes.png') no-repeat center;
   font-weight: $fw-semibold;
 }
 
@@ -30,14 +29,17 @@
     transform: scale(0.7);
   }
 }
+
 @media screen and (max-width: 425px) {
   .container {
     transform: scale(0.3);
     height: 400px;
   }
 }
+
 .patras {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -60,6 +62,7 @@
 
 .kalogria {
   display: block;
+
   &::before {
     content: '';
     display: block;
@@ -80,6 +83,7 @@
 
 .olympia {
   display: block;
+
   &::before {
     content: '';
     display: block;
@@ -101,6 +105,7 @@
 
 .vithina {
   display: block;
+
   &::before {
     content: '';
     display: block;
@@ -121,6 +126,7 @@
 
 .lechaio {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -136,13 +142,14 @@
 .lechaioLocation {
   position: absolute;
   top: 22%;
-  right: 36%;
+  right: 39%;
   border-radius: 24px;
   padding: 4px;
 }
 
 .korinth {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -165,6 +172,7 @@
 
 .altepidaurus {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -180,13 +188,14 @@
 .altepidaurusLocation {
   position: absolute;
   top: 34%;
-  right: 22%;
+  right: 26%;
   border-radius: 24px;
   padding: 0 4px;
 }
 
 .napflio {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -209,6 +218,7 @@
 
 .kalamata {
   display: block;
+
   &::after {
     content: '';
     display: block;
@@ -229,6 +239,7 @@
 
 .sparta {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -251,6 +262,7 @@
 
 .mystras {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -273,6 +285,7 @@
 
 .chranoi {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -288,13 +301,14 @@
 .chranoiLocation {
   position: absolute;
   top: 64%;
-  right: 50%;
+  right: 53%;
   border-radius: 24px;
   padding: 0 4px;
 }
 
 .itilo {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -317,6 +331,7 @@
 
 .leonidio {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -339,6 +354,7 @@
 
 .mavrovouni {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -361,6 +377,7 @@
 
 .monemvassia {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -376,12 +393,14 @@
 .monemvassiaLocation {
   position: absolute;
   top: 74%;
-  right: 25%;
+  right: 26.5%;
   border-radius: 24px;
   padding: 0 4px;
 }
+
 .gythion {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -404,6 +423,7 @@
 
 .areopolis {
   display: block;
+
   &::after {
     content: '';
     display: inline-block;
@@ -426,6 +446,7 @@
 
 .gerolimenas {
   display: block;
+
   &::after {
     content: '';
     display: inline-block;
@@ -448,6 +469,7 @@
 
 .methoni {
   display: block;
+
   &::after {
     content: '';
     display: inline-block;
@@ -470,6 +492,7 @@
 
 .marathopolis {
   display: block;
+
   &::after {
     content: '';
     display: inline-block;
@@ -492,6 +515,7 @@
 
 .gialova {
   display: block;
+
   &::after {
     content: '';
     display: inline-block;
@@ -514,6 +538,7 @@
 
 .elafonisos {
   display: block;
+
   &::before {
     content: '';
     display: block;
@@ -526,8 +551,8 @@
 
 .elafonisosLocation {
   position: absolute;
-  top: 86%;
-  right: 30%;
+  top: 81%;
+  right: 31%;
   border-radius: 24px;
   padding: 4px;
 }
