--- a/src/pages/CareerPage/CareerPage.module.scss
+++ b/src/pages/CareerPage/CareerPage.module.scss
@@ -45,3 +45,41 @@
 .noVacancies {
   margin: auto;
 }
+.modal {
+  padding: 0 20px;
+
+  [class*='modalContent'] {
+    display: block;
+
+    &:nth-child(1) {
+      overflow: hidden;
+      overflow-y: auto;
+
+      &::-webkit-scrollbar {
+        height: 5px;
+        width: 6px;
+      }
+      &::-webkit-scrollbar-track {
+        background: $color-layout-light-blue;
+        border-radius: 2px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: $color-layout-light-blue-2;
+        border-radius: 24px;
+      }
+    }
+
+    @include laptop-desktop {
+      margin: 0 20px;
+    }
+    @include mobile {
+      margin: 0;
+      min-height: 100%;
+      border-radius: 0;
+    }
+  }
+
+  @include mobile {
+    padding: 0;
+  }
+}
