--- a/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Highlighted/Highlighted.module.scss
+++ b/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Highlighted/Highlighted.module.scss
@@ -1,13 +1,12 @@
 @use 'styles/style.scss' as *;
 
 .wrapper {
-  width: 100%;
-  max-width: 1110px;
-  margin: 100px auto 0;
+  width: 48%;
+  max-width: 100%;
   padding: 0 20px;
 
   @include mobile-tablet {
-    width: 100%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,10 +20,14 @@
   }
 
   @include laptop {
-    width: 100%;
+    //width: 45%;
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  @media (max-width: 1200px) {
+    width: 100%;
   }
 }
 
@@ -39,7 +42,8 @@
   gap: 3%;
   flex-wrap: wrap;
   flex-direction: row;
-  padding-bottom: 80px;
+  padding-bottom: 20px;
+  max-width: 100%;
 
   @include laptop {
     flex-direction: column;
