--- a/src/pages/TravelPlannerPage/StaticTravelPlannerPage/StaticTravelPlannerPage.module.scss
+++ b/src/pages/TravelPlannerPage/StaticTravelPlannerPage/StaticTravelPlannerPage.module.scss
@@ -19,6 +19,7 @@
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   @include mobile {
     padding: 0 20px;
+    font-size: 24px;
     color: $color-bg-black;
   }
 }
@@ -43,5 +44,22 @@
   @include mobile {
     width: 100%;
     padding: 0 20px;
+  }
+}
+
+.proposalsWrapper {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 100px 150px 0;
+  margin-bottom: 60px;
+  gap: 25px;
+
+  @media (max-width: 900px) {
+    padding: 50px 40px 0;
+  }
+
+  @include mobile {
+    padding: 30px 10px 0;
   }
 }
