--- a/src/styles/theme/fonts.scss
+++ b/src/styles/theme/fonts.scss
@@ -15,4 +15,7 @@ $font-Montserrat: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI,
 
 $font-Corinthia: Corinthia, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
   Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+// Demo font
+$font-Century-Gothic: Century Gothic, Lato, Montserrat -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 $color-brochure-placeholder: #ccc;
