--- a/public/assets/fonts/stylesheet.scss
+++ b/public/assets/fonts/stylesheet.scss
@@ -205,3 +205,21 @@
   font-weight: 400;
   font-style: normal;
 }
+
+// Demo font
+@font-face {
+  font-family: 'Century Gothic';
+  src: url('centuryGothic/centurygothic.ttf') format('truetype'),
+  url('centuryGothic/centurygothic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+// Demo font
+@font-face {
+  font-family: 'Century Gothic';
+  src: url('centuryGothic/centurygothic_bold.ttf') format('truetype'),
+  url('centuryGothic/centurygothic_bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
