--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -29,7 +29,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
