--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -8,7 +8,7 @@
   border-radius: 8px;
   border: none;
   padding: 0 24px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   font-weight: $fw-light;
   cursor: pointer;
