--- a/src/features/HotelCard/HotelCard.module.scss
+++ b/src/features/HotelCard/HotelCard.module.scss
@@ -23,6 +23,10 @@
 .footer {
   height: 48px;
 
+  .footerButton {
+    font-size: 16px;
+  }
+
   .footerButton,
   .hotelChangingCardFooterButton {
     height: 100%;
