--- a/src/features/StartTripForm/StartTripForm.module.scss
+++ b/src/features/StartTripForm/StartTripForm.module.scss
@@ -73,9 +73,9 @@
 }
 
 .optionTitle {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: $fw-bold;
-  line-height: 17px;
+  line-height: 20px;
   margin: 10px 0;
 }
 
@@ -95,9 +95,9 @@
     width: 50%;
     margin-right: 65px;
     text-align: right;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: $fw-bold;
-    line-height: 17px;
+    line-height: 20px;
   }
 }
 
@@ -130,6 +130,10 @@
   cursor: pointer;
   border: none;
   background-color: transparent;
+}
+
+.startTripButton  {
+  font-size: 16px;
 }
 
 @include mobile {
