--- a/src/pages/TripPage/TripPage.module.scss
+++ b/src/pages/TripPage/TripPage.module.scss
@@ -2,7 +2,6 @@
 @import '/src/styles/theme/breakpoints.scss';
 
 .wrapper {
-  font-family: 'Lato', sans-serif;
   font-style: normal;
   font-weight: $fw-regular;
   font-size: 14px;
@@ -110,6 +109,7 @@
   color: $color-bg-black;
   cursor: pointer;
   position: relative;
+  font-size: 16px;
 
   &[aria-selected='true'] {
     background-color: transparent;
