Fix career description (#239)
* fix format of text in career description

* fix format of text in career description

--- a/src/components/TruncatedText/truncatedText.module.scss
+++ b/src/components/TruncatedText/truncatedText.module.scss
@@ -5,6 +5,7 @@
   font-weight: $fw-regular;
   line-height: 20px;
   color: $color-bg-black;
+  white-space: pre-wrap;
 }
 .seeMore {
   font-weight: $fw-bold;
