add missing points (#242)

--- a/src/features/DestinationMaps/Kreta/Kreta.module.scss
+++ b/src/features/DestinationMaps/Kreta/Kreta.module.scss
@@ -304,7 +304,7 @@
   padding: 4px;
 }
 
-.rounda {
+.elounda {
   display: block;
 
   &::after {
@@ -317,7 +317,7 @@
   }
 }
 
-.roundaLocation {
+.eloundaLocation {
   position: absolute;
   top: 64%;
   right: 12%;
