--- a/src/features/DestinationMaps/Macedonia/Macedonia.module.scss
+++ b/src/features/DestinationMaps/Macedonia/Macedonia.module.scss
@@ -223,7 +223,7 @@
   padding: 4px;
 }
 
-.sirderochori {
+.siderochori {
   display: block;
 
   &::before {
@@ -238,7 +238,7 @@
   }
 }
 
-.sirderochoriLocation {
+.siderochoriLocation {
   position: absolute;
   top: 45%;
   right: 71%;
