--- a/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
+++ b/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
@@ -193,7 +193,7 @@
   padding: 0 4px;
 }
 
-.napflio {
+.nafplio {
   display: block;
 
   &::before {
@@ -208,10 +208,10 @@
   }
 }
 
-.napflioLocation {
+.nafplioLocation {
   position: absolute;
   top: 40%;
-  right: 34%;
+  right: 37%;
   border-radius: 24px;
   padding: 0 4px;
 }
