mock offer_percent and add dicounted price

--- a/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
+++ b/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
@@ -71,6 +71,10 @@
   font-weight: $fw-bold;
   line-height: 17px;
   height: 20px;
+  span {
+    text-decoration: line-through;
+    color: rgb(168, 168, 168);
+  }
 }
 .pencil {
   cursor: pointer;
