--- a/src/components/RegionCard/RegionCard.module.scss
+++ b/src/components/RegionCard/RegionCard.module.scss
@@ -2,10 +2,13 @@
 
 .cart_shown {
   position: absolute;
-  bottom: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
   left: 100%;
-  height: 310px;
+  bottom: 100%;
   width: 260px;
+  padding: 8px;
   background-color: $color-white;
   box-shadow: 0 12px 12px rgba(0, 60, 118, 0.15);
   border-radius: 8px;
@@ -16,7 +19,13 @@
 .cart_picture {
   display: flex;
   justify-content: center;
-  margin-top: 8px;
+}
+
+.cart_info {
+  padding: 0 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .cart_title {
@@ -24,7 +33,6 @@
   font-size: 16px;
   line-height: 20px;
   color: $color-bg-black;
-  margin: 16px 0 8px 16px;
 }
 
 .description {
@@ -35,9 +43,6 @@
   height: 100%;
   max-height: 60px;
   color: $color-bg-black;
-  max-width: 220px;
-  margin-bottom: 16px;
-  margin-left: 16px;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
