--- a/src/features/DestinationMaps/Greece/Greece.module.scss
+++ b/src/features/DestinationMaps/Greece/Greece.module.scss
@@ -225,6 +225,7 @@
 .cartShown_28 {
   left: 60%;
   top: 20%;
+  bottom: auto;
 }
 
 .cartShown_24 {
@@ -240,6 +241,7 @@
 .cartShown_25 {
   left: 60%;
   top: 20%;
+  bottom: auto;
 }
 
 .cartShown_27 {
