--- a/src/features/DestinationMaps/Kreta/Kreta.module.scss
+++ b/src/features/DestinationMaps/Kreta/Kreta.module.scss
@@ -655,37 +655,15 @@
   padding: 0 4px;
 }
 
-.regionCardanatoli {
-  bottom: 100%;
-  left: -250px;
-}
-
-.regionCardierapetra {
-  bottom: 100%;
-  left: -250px;
-}
-
-.regionCardarchanes {
-  bottom: 100%;
-  left: -250px;
-}
-
-.regionCardagiagalini {
-  bottom: 100%;
-  left: -250px;
-}
-
-.regionCardsitia {
-  bottom: 100%;
-  left: -250px;
-}
-
-.regionCardkatozakros {
-  bottom: 100%;
-  left: -250px;
-}
-
-.regionCardferma {
-  bottom: 100%;
+.regionCardanatoli,
+.regionCardierapetra,
+.regionCardarchanes,
+.regionCardagiagalini,
+.regionCardsitia,
+.regionCardkatozakros,
+.regionCardferma,
+.regionCardelounda,
+.regionCardmakrigialosanalipsi,
+.regionCardkouremenos {
   left: -250px;
 }
