--- a/src/features/DestinationMaps/Saronische/Saronische.module.scss
+++ b/src/features/DestinationMaps/Saronische/Saronische.module.scss
@@ -77,7 +77,7 @@
 .hydraLocation {
   position: absolute;
   top: 56%;
-    right: 37%;
+  right: 37%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -107,11 +107,7 @@
 
 
 
-.regionCardportaria {
-  top: 100%;
-  left: 100%;
-}
-
+.regionCardportaria,
 .regionCardzagora {
   top: 100%;
   left: 100%;
