--- a/src/features/DestinationMaps/Euboa/Euboa.module.scss
+++ b/src/features/DestinationMaps/Euboa/Euboa.module.scss
@@ -4,8 +4,7 @@
   position: relative;
   width: 1040px;
   height: 720px;
-  background: url('../../../../public/assets/images/destinations/Individual maps/Euboa.png')
-    no-repeat center;
+  background: url('../../../../public/assets/images/destinations/Individual maps/Euboa.png') no-repeat center;
   font-weight: $fw-semibold;
 }
 
@@ -30,14 +29,17 @@
     transform: scale(0.7);
   }
 }
+
 @media screen and (max-width: 425px) {
   .container {
     transform: scale(0.3);
     height: 400px;
   }
 }
+
 .korfu {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -61,6 +63,7 @@
 
 .kythira {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -84,6 +87,7 @@
 
 .paxos {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -107,6 +111,7 @@
 
 .lefkada {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -130,6 +135,7 @@
 
 .ithaki {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -153,6 +159,7 @@
 
 .kefalonia {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -176,6 +183,7 @@
 
 .zakynthos {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -192,19 +200,13 @@
   position: absolute;
   top: 58%;
   right: 68%;
-
   border-radius: 24px;
   padding: 0 4px;
 }
 
-.regionCardkorfu {
-  top: 20%;
-}
-
-.regionCardpaxos {
-  top: 20%;
-}
-
+.regionCardkorfu,
+.regionCardpaxos,
 .regionCardlefkada {
   top: 20%;
+  bottom: auto;
 }
