--- a/src/features/DestinationMaps/Mitteigriechenland/Mitteigriechenland.module.scss
+++ b/src/features/DestinationMaps/Mitteigriechenland/Mitteigriechenland.module.scss
@@ -4,8 +4,7 @@
   position: relative;
   width: 1040px;
   height: 720px;
-  background: url('../../../../public/assets/images/destinations/Individual maps/Mitteigriechenland.png')
-    no-repeat center;
+  background: url('../../../../public/assets/images/destinations/Individual maps/Mitteigriechenland.png') no-repeat center;
   font-weight: $fw-semibold;
 }
 
@@ -30,14 +29,17 @@
     transform: scale(0.7);
   }
 }
+
 @media screen and (max-width: 425px) {
   .container {
     transform: scale(0.3);
     height: 400px;
   }
 }
+
 .rovies {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -60,6 +62,7 @@
 
 .kymi {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -82,6 +85,7 @@
 
 .karistos {
   display: block;
+
   &::before {
     content: '';
     display: inline-block;
@@ -102,15 +106,12 @@
   padding: 0 4px;
 }
 
-.regionCardrevies {
-  top: 20%;
-}
-
+.regionCardrovies,
 .regionCardkymi {
   top: 20%;
+  bottom: auto;
 }
 
 .regionCardkaristos {
-  bottom: 100%;
   left: -250px;
 }
