add allocation alert, change getClientsRoom helper (#250)
* add allocation alert, change getClientsRoom helper

* fix build

* destruct getClientsRoom call

* add comment in hepler

* replace comment in helper

* Revert "replace comment in helper"

This reverts commit e16c1eeb21b06fa4cbc0a3ed18c573f7e9ef10df.

* fix for build

--- a/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
+++ b/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
@@ -62,7 +62,11 @@
     display: block;
   }
 }
-
+.allocationAlert {
+  color: red;
+  text-align: center;
+  margin-top: 10px;
+}
 .sectionTitle,
 .roomTitle {
   max-width: 160px;
